--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 __pycache__
+.vscode
 *.mtx
 *.egg-info
 *.csv
@@ -6,6 +7,12 @@ __pycache__
 *.pdf
 *.npy
 *.pt
+trained_models/
+test_chembl23/
+build/
+dist/
+sparsechem.code-workspace
+train.bat
 .idea
 *.code-workspace
 metrics_dev.*
@@ -22,21 +29,3 @@ docs/kevins_util_orig.py
 docs/util_modified.py
 docs/util_orig.py
 pbs_jobs/del_exp_folders.sh
-.idea
-*.code-workspace
-metrics_dev.*
-.ipynb_checkpoints/
-experiments/
-wandb/
-pbs_outputs/
-pbs_output/
-pbs_jobs/wandb/
-pbs_jobs/del_wandb.sh
-pbs_jobs/del_pbs.sh
-docs/kevins_util_modified.py
-docs/kevins_util_orig.py
-docs/util_modified.py
-docs/util_orig.py
-pbs_jobs/del_exp_folders.sh
-.ipynb_checkpoints
-*.code-workspace
