--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ metrics_dev.*
 .ipynb_checkpoints/
 experiments/
 wandb/
-pbs_output/
+pbs_outputs/
 pbs_jobs/wandb/
 pbs_jobs/del_wandb.sh
 pbs_jobs/del_pbs.sh
