--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ pbs_outputs/
 pbs_jobs/wandb/
 pbs_jobs/del_wandb.sh
 pbs_jobs/del_pbs.sh
+docs/kevins_util_modified.py
+docs/kevins_util_orig.py
+docs/util_modified.py
+docs/util_orig.py
