--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ __pycache__
 *.pdf
 *.npy
 *.pt
+pbs_jobs/wandb
+.ipynb_checkpoints
+pbs_jobs/del_exp_folders.sh
+pbs_jobs/del_pbs.sh
+pbs_jobs/del_wandb.sh
