19-10-2022 AdaShare branch update

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ docs/kevins_util_orig.py
 docs/util_modified.py
 docs/util_orig.py
 pbs_jobs/del_exp_folders.sh
+.ipynb_checkpoints
+*.code-workspace
